<resources>
    <string name="app_name">FoodTruckFinderMI</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="signup_hint">Signup</string>
    <string name="login_hint">Login</string>
    <string name="title_text">YouFoodFinder</string>
    <string name="back_hint">Back</string>

    <string name="title_activity_user_screen">UserScreen</string>
    <string name="tab_text_1">Search Trucks</string>
    <string name="tab_text_2">Nearby Trucks</string>
    <string name="tab_text_3">Events</string>

    <string name="nearby_button_hint">Nearby</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="reviews_hint">Reviews</string>
    <string name="submit_hint">Submit</string>
    <string name="review_body_hint">Type Your Review Here.</string>
    <string name="settings_hint">Settings</string>
    <string name="logout_hint">Logout</string>
    <string name="closed_hint">Closed</string>
    <string name="open_hint">Open</string>

    <string name="unknown_going">Going?</string>
    <string name="unknown_intrested">Interested?</string>
    <string name="going">Going</string>
    <string name="interested">Interested</string>
    <string name="uninterested">Uninterested</string>
    <string name="rsvp">RSVP</string>
    <string name="rsvp_amount_hint">Group Amount</string>

    <string name="weak">Weak</string>
    <string name="medium">Medium</string>
    <string name="strong">Strong</string>
    <string name="very_strong">Very Strong</string>
    <string name="open_icon">Open Icon</string>
    <string name="food_icon">Food Icon</string>
    <string name="city_icon">City Icon</string>
    <string name="website_icon">Website Icon</string>
    <string name="email_icon">Email Icon</string>
    <string name="search_tab">Search Tab</string>
    <string name="event_tab">Event Tab</string>
    <string name="account_tab">Account Tab</string>
    <string name="what_title">What</string>
    <string name="are_we_eating_today">Are we eating today</string>
    <string name="where">Where</string>
    <string name="to_get_food">To get food</string>
    <string name="open_button">Open Button</string>
    <string name="rating">Rating</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="map_hint">Map</string>
    <string name="info_hint">Info</string>
    <string name="trucks_hint">Trucks</string>
    <string name="enable_2fa">Enable 2FA</string>

    <string-array name="providers">
        <item name="AT&amp;T">AT&amp;T</item>
        <item name="Verizon">Verizon</item>
        <item name="Boost Mobile">Boost Mobile</item>
        <item name="C-Spire">C-Spire</item>
        <item name="Cricket Wireless">Cricket Wireless</item>
        <item name="Consumer Cellular">Consumer Cellular</item>
        <item name="Google Project Fi">Google Project Fi</item>
        <item name="Metro PCS">Metro PCS</item>
        <item name="Mine Mobile">Mint Mobile</item>
        <item name="Page Plus">Page Plus</item>
        <item name="Republic Wireless">Republic Wireless</item>
        <item name="Sprint">Sprint</item>
        <item name="Straight Talk">Straight Talk</item>
        <item name="T-Mobile">T-Mobile</item>
        <item name="Ting">Ting</item>
        <item name="Tracfone">Tracfone</item>
        <item name="U.S. Cellular">U.S. Cellular</item>
        <item name="Virgin Mobile">Virgin Mobile</item>
        <item name="Xfinity Mobile">Xfinity Mobile</item>
    </string-array>

</resources>