<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AccountScreen">

    <Button
        android:id="@+id/logoutButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:text="@string/logout_hint"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/title_background"
        android:orientation="horizontal"
        android:paddingTop="16dp"
        android:weightSum="1.0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/searchTabButton"
            android:layout_width="50dp"
            android:layout_height="55dp"
            android:layout_marginBottom="16dp"
            android:layout_weight=".3"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/search_tab"
            android:minHeight="48dp"
            android:src="@drawable/ic_baseline_search_24"
            tools:ignore="ImageContrastCheck" />

        <ImageButton
            android:id="@+id/eventTabButton"
            android:layout_width="50dp"
            android:layout_height="55dp"
            android:layout_marginBottom="16dp"
            android:layout_weight=".4"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/event_tab"
            android:src="@drawable/ic_baseline_event_24"
            tools:ignore="ImageContrastCheck" />

        <ImageButton
            android:id="@+id/accountTabButton"
            android:layout_width="50dp"
            android:layout_height="55dp"
            android:layout_marginBottom="16dp"
            android:layout_weight=".3"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/account_tab"
            android:src="@drawable/ic_baseline_account_circle_24"
            app:tint="@color/gold"
            tools:ignore="ImageContrastCheck" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_text"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>