<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/layout_outline"
    tools:context=".Fragments.TruckInfoFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight=".8"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/isOpenIcon"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:contentDescription="@string/open_icon"
            app:srcCompat="@drawable/ic_baseline_assignment_turned_in_24" />

        <ImageView
            android:id="@+id/foodTypeIcon"
            app:srcCompat="@drawable/ic_baseline_fastfood_24"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:contentDescription="@string/food_icon" />

        <ImageView
            android:id="@+id/cityIcon"
            app:srcCompat="@drawable/ic_baseline_location_on_24"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:contentDescription="@string/city_icon" />

        <ImageView
            android:id="@+id/websiteIcon"
            app:srcCompat="@drawable/ic_baseline_open_in_new_24"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:contentDescription="@string/website_icon" />

        <ImageView
            android:id="@+id/emailIcon"
            app:srcCompat="@drawable/ic_baseline_email_24"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:contentDescription="@string/email_icon" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight=".2"
        android:orientation="vertical">

        <TextView
            android:id="@+id/openLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/jetbrains_mono"
            android:textSize="24sp"
            tools:text="IsOpen" />

        <TextView
            android:id="@+id/foodLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="16dp"
            android:textSize="24sp"
            tools:text="FoodType" />

        <TextView
            android:id="@+id/cityLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/jetbrains_mono"
            android:textSize="24sp"
            tools:text="City" />

        <TextView
            android:id="@+id/websiteLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/jetbrains_mono"
            android:textSize="24sp"
            tools:text="Website" />

        <TextView
            android:id="@+id/emailLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="44dp"
            android:fontFamily="@font/jetbrains_mono"
            android:textSize="24sp"
            tools:text="Email" />
    </LinearLayout>
</LinearLayout>